fix(ActionMenu): Re-align recipients on mobile

--- a/src/drive/styles/actionmenu.styl
+++ b/src/drive/styles/actionmenu.styl
@@ -77,7 +77,7 @@
 .fil-action-moveto
     background embedurl("../assets/icons/icon-moveto-grey.svg") 1rem center no-repeat
 
-    .fil-actionmenu-recipients
-        position absolute
-        right    1rem
-        top      .1rem
+.fil-action-share .fil-actionmenu-recipients
+    position absolute
+    right    1rem
+    top      .1rem
